examples/test/testpolicy383.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy383
  namespace: namespace114
spec:
  podSelector:
    matchLabels:
      key31: value14
      key32: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value35
          key35: value9
      podSelector:
        matchLabels:
          key5: value2
          key3: value31
